<resources>
    <string name="app_name">OwnFarmer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Product</string>
    <string name="menu_slideshow">Services</string>
    <string name="search">Search</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Rate Us</string>

    <string name="menu_switch_language">Switch Language (اردو)</string>
    <string name="latest_products">Latest Products</string>
    <string name="view_all">View All</string>
    <string name="latest_services">Latest Services</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="product">Product</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="notification_String">Notification</string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign In</string>
    <string name="and_start_meeting_farmers_around_the_world">and start meeting farmers around the world</string>
    <string name="create_account">Create Account</string>
    <string name="send_me_awesome_offers_and_updates_by_email">Send me awesome offers and updates by email</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="vegetable">vegetable</string>
    <string name="_4_5">4.5</string>
    <string name="vegetable_description">vegetable description</string>
    <string name="rs_707">Rs. 707</string>
    <string name="_1_0_off">1.0% off</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="email_phone_number">Email / Phone Number</string>
    <string name="name">Name :</string>
    <string name="aslambscs_gamil_com">aslambscs@gamil.com</string>
    <string name="aslam">Aslam</string>
    <string name="my_services">My Services</string>
    <string name="product_rating">Product Rating</string>
    <string name="my_products">My Products</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="services">Services</string>
    <string name="call">Call</string>
    <string name="product_name">Product Name</string>
    <string name="product_description_to_buy">Product Description To Buy</string>
    <string name="service_name">Service Name</string>
    <string name="service_description_to_buy">Service Description To Buy</string>
    <string name="message">Message</string>
    <string name="time">Time</string>
    <string name="type_here">Type Here ....</string>
    <string name="contact_farmer">Contact Farmer</string>
    <string name="incoming">incoming</string>
    <string name="outgoing">outgoing</string>
    <string name="view_detail">View Detail</string>
    <string name="owner_name">Owner Name</string>
    <string name="owner_info">Owner Info:</string>
    <string name="farmer">Farmer</string>
    <string name="customer">Customer</string>
    <string name="delete">Delete</string>

    <string name="image_url">http://192.168.137.237/ownfarmer/</string>
    <string name="product_image">Product Image :</string>
    <string name="product_name_">Product Name :</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="product_price">Product Price :</string>
    <string name="enter_product_price">Enter Product Price</string>
    <string name="product_unit">Product Unit :</string>
    <string name="enter_product_unit">Enter Product Unit</string>
    <string name="product_description">Product Description :</string>
    <string name="enter_product_description">Enter Product Description</string>
    <string name="add_product">Add Product</string>
    <string name="service_image">Service Image</string>
    <string name="service_name_">Service Name</string>
    <string name="enter_service_name">Enter Service Name</string>
    <string name="service_price">Service Price</string>
    <string name="enter_service_price">Enter Service Price</string>
    <string name="service_duration">Service Duration</string>
    <string name="enter_service_duration">Enter Service Duration</string>
    <string name="service_description">Service Description</string>
    <string name="enter_service_description">Enter Service Description</string>
    <string name="add_service">Add Service</string>
    <string name="all_farmers">All Farmers</string>
    <string name="update_product">Update Product</string>
    <string name="update_service">Update Service</string>

</resources>