<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_switch_language"
            android:icon="@drawable/ic_language_coloured"
            android:title="@string/menu_switch_language" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_all_farmers"
            android:icon="@drawable/ic_baseline_ballot_24"
            android:title="@string/all_farmers"
            android:visible="false"/>
        <item
            android:id="@+id/nav_add_products"
            android:icon="@drawable/ic_baseline_add_shopping_cart_24"
            android:title="@string/add_product"
            android:visible="false"/>
        <item
            android:id="@+id/nav_add_services"
            android:icon="@drawable/ic_add_service"
            android:title="@string/add_service"
            android:visible="false"/>
        <item
            android:id="@+id/nav_my_products"
            android:icon="@drawable/ic_baseline_add_shopping_cart_24"
            android:title="@string/my_products"
            android:visible="false"/>
        <item
            android:id="@+id/nav_my_services"
            android:icon="@drawable/ic_add_service"
            android:title="@string/my_services"
            android:visible="false"/>
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_baseline_add_shopping_cart_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_add_service"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_baseline_contact_page_24"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_rate_us"
            android:icon="@drawable/ic_baseline_star_rate_24"
            android:title="@string/rate_us" />
    </group>
</menu>