<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpActivity">

    <include layout="@layout/toolbar_activity_withback_btn" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/main_sign_up_linear"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60sp"
                android:text="@string/create_account"
                android:textColor="@color/green_borders"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="70dp"
                android:gravity="center"
                android:text="@string/and_start_meeting_farmers_around_the_world"
                android:textColor="@color/green_background"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/user_type_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <RadioButton
                    android:id="@+id/farmer_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/farmer"
                    android:buttonTint="@color/green_text"
                    android:textSize="16sp"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/customer_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customer"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:buttonTint="@color/green_text" />

            </RadioGroup>

            <EditText
                android:id="@+id/signup_full_name_et"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:textSize="13sp"
                android:background="@drawable/loginsignup_edittext_back"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"/>

            <EditText
                android:id="@+id/signup_email_et"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/loginsignup_edittext_back"
                android:hint="@string/email"
                android:textSize="13sp"
                android:inputType="textWebEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/signup_number_et"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/loginsignup_edittext_back"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="13"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/signup_address_et"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/loginsignup_edittext_back"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/signup_password_et"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:textSize="13sp"
                android:background="@drawable/loginsignup_edittext_back"
                android:hint="@string/password"
                android:inputType="textWebPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                app:hintEnabled="false"/>

            <EditText
                android:id="@+id/signup_confirm_password_et"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/loginsignup_edittext_back"
                android:hint="@string/confirm_password"
                android:inputType="textWebPassword"
                android:textSize="13sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                app:hintEnabled="false"/>

            <CheckBox
                android:id="@+id/signup_terms_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:buttonTint="@color/green_borders"
                android:text="@string/send_me_awesome_offers_and_updates_by_email"
                android:textColor="@color/green_background"
                android:textSize="12sp" />

            <Button
                android:id="@+id/signup_btn_register"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/button_background_green"
                android:text="@string/register"
                android:layout_marginBottom="20dp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>