<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editservice.EditServiceActivity">

    <include layout="@layout/toolbar_activity_withback_btn" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/image_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_image"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif" />

            <RelativeLayout
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/service_img"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:foregroundGravity="center"
                    android:background="@drawable/placeholder"
                    android:layout_centerInParent="true"/>

                <ImageView
                    android:id="@+id/update_pic_IMG_service"
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="130dp"
                    android:src="@drawable/ic_photo_camera"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_name_"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif" />

            <EditText
                android:id="@+id/edit_service_name_et"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="13sp"
                android:layout_marginTop="5dp"
                android:background="@drawable/loginsignup_edittext_back"
                android:hint="@string/enter_service_name"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_price"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif" />

            <EditText
                android:id="@+id/edit_service_price_et"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="13sp"
                android:layout_marginTop="5dp"
                android:background="@drawable/loginsignup_edittext_back"
                android:hint="@string/enter_service_price"
                android:inputType="number"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:paddingEnd="10dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textColorHint="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_duration"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif" />

            <EditText
                android:id="@+id/edit_service_duration_et"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="13sp"
                android:layout_marginTop="5dp"
                android:background="@drawable/loginsignup_edittext_back"
                android:hint="@string/enter_service_duration"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_description"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif" />

            <EditText
                android:id="@+id/edit_service_description_et"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="13sp"
                android:layout_marginTop="5dp"
                android:background="@drawable/loginsignup_edittext_back"
                android:hint="@string/enter_service_description"
                android:inputType="textPostalAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"/>

            <Button
                android:id="@+id/edit_service_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/button_background_green"
                android:text="@string/update_service"
                android:layout_marginBottom="20dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>