<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="60sp"
            android:textStyle="bold"
            app:lottie_rawRes="@raw/farmer"
            android:scaleType="centerCrop"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:textSize="30sp" />


        <EditText
            android:id="@+id/login_email_or_phone_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/loginsignup_edittext_back"
            android:hint="@string/email_phone_number"
            android:layout_gravity="start"
            android:inputType="textWebEmailAddress"
            android:textSize="13sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:textColor="@color/black"
            android:textColorHint="@color/white" />



        <EditText
            android:id="@+id/login_password_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/loginsignup_edittext_back"
            android:hint="@string/password"
            android:layout_gravity="start"
            android:inputType="textWebPassword"
            android:textSize="13sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            app:hintEnabled="false"/>


        <Button
            android:id="@+id/login_button_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/button_background_green"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/dont_have_account_login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="30dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/colorYellow"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>